// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BpkMobileScrollContainer should render correctly 1`] = `
<DocumentFragment>
  <div
    class="bpk-mobile-scroll-container"
    data-backpack-ds-component="MobileScrollContainer"
    style="height: auto;"
  >
    <div
      class="bpk-mobile-scroll-container__scroller"
    >
      <div
        class="bpk-mobile-scroll-container__inner"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkMobileScrollContainer should render correctly when showScrollbar is set to true 1`] = `
<DocumentFragment>
  <div
    class="bpk-mobile-scroll-container"
    data-backpack-ds-component="MobileScrollContainer"
    style="height: auto;"
  >
    <div
      class="bpk-mobile-scroll-container__scroller bpk-mobile-scroll-container__showScrollbar"
    >
      <div
        class="bpk-mobile-scroll-container__inner"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkMobileScrollContainer should render correctly with a custom "className" attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-mobile-scroll-container my-custom-class"
    data-backpack-ds-component="MobileScrollContainer"
    style="height: auto;"
  >
    <div
      class="bpk-mobile-scroll-container__scroller"
    >
      <div
        class="bpk-mobile-scroll-container__inner"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkMobileScrollContainer should render correctly with a custom "style" attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-mobile-scroll-container"
    data-backpack-ds-component="MobileScrollContainer"
    style="background-color: rgb(209, 67, 91); height: auto;"
  >
    <div
      class="bpk-mobile-scroll-container__scroller"
    >
      <div
        class="bpk-mobile-scroll-container__inner"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkMobileScrollContainer should render correctly with ariaLabel prop 1`] = `
<DocumentFragment>
  <div
    class="bpk-mobile-scroll-container"
    data-backpack-ds-component="MobileScrollContainer"
    style="height: auto;"
  >
    <div
      class="bpk-mobile-scroll-container__scroller"
    >
      <div
        aria-label="my nav content"
        class="bpk-mobile-scroll-container__inner"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkMobileScrollContainer should render correctly with ariaLabel prop set to undefined 1`] = `
<DocumentFragment>
  <div
    class="bpk-mobile-scroll-container"
    data-backpack-ds-component="MobileScrollContainer"
    style="height: auto;"
  >
    <div
      class="bpk-mobile-scroll-container__scroller"
    >
      <div
        class="bpk-mobile-scroll-container__inner"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
      </div>
    </div>
  </div>
</DocumentFragment>
`;
